@@ -1,3 +1,8 @@
+2005-06-16  mallum,,,  <mallum@openedhand.com>
+
+	* xresponse.c: (main):
+	Dont collect damage between drags.
+
 2005-06-15  mallum,,,  <mallum@openedhand.com>
 
 	* xresponse.c: (handle_xerror), (fake_event), (main):
